# CoconutTools

./: .gitignore  CMakeLists.txt  Makefile  cmake.cfg.example  premake5.lua
cmake/: FindCoconutTools.cmake  FindGMock.cmake  executable-module.cmake  library-module.cmake
coconut-tools-bits/: CMakeLists.txt  premake5.lua
coconut-tools-bits/src/main/c++/coconut-tools/bits/: endianness.hpp
coconut-tools-bits/src/test/c++/coconut-tools/bits/: endianness.cpp
coconut-tools-concurrent/: CMakeLists.txt  premake5.lua
coconut-tools-concurrent/src/main/c++/coconut-tools/: concurrent.hpp
coconut-tools-concurrent/src/main/c++/coconut-tools/concurrent/: ILockable.hpp  LockTraits.hpp  Lockable.hpp  LockableInstance.hpp  LockingPtr.hpp  fake.hpp
coconut-tools-concurrent/src/test/c++/coconut-tools/concurrent/: Lockable.cpp  LockableInstance.cpp  LockingPtr.cpp
coconut-tools-configuration/: CMakeLists.txt  premake5.lua
coconut-tools-configuration/src/main/c++/coconut-tools/configuration/: Configurable.hpp  Configuration.hpp  ConfigurationUpdater.hpp  FlatConfiguration.hpp  HierarchicalConfiguration.cpp  HierarchicalConfiguration.hpp  StackedConfiguration.hpp  StringConfiguration.hpp  configuration-exceptions.cpp  configuration-exceptions.hpp
coconut-tools-configuration/src/test/c++/coconut-tools/configuration/: Configuration.cpp  ConfigurationUpdater.cpp  HierarchicalConfiguration.cpp
coconut-tools-design-pattern/: CMakeLists.txt
coconut-tools-design-pattern/src/main/c++/coconut-tools/: design-pattern.hpp
coconut-tools-design-pattern/src/main/c++/coconut-tools/design-pattern/: Singleton.hpp  factory.hpp  locking-policy.hpp
coconut-tools-design-pattern/src/test/c++/coconut-tools/design-pattern/: Factory.cpp
coconut-tools-enum/: CMakeLists.txt
coconut-tools-enum/src/main/c++/coconut-tools/: enum.hpp
coconut-tools-enum/src/main/c++/coconut-tools/enum/: enum.hpp  flag.hpp
coconut-tools-enum/src/test/c++/coconut-tools/: enum.cpp
coconut-tools-enum/src/test/c++/coconut-tools/enum/: enum.cpp  flag.cpp
coconut-tools-enums/: CMakeLists.txt  premake5.lua
coconut-tools-enums/src/main/c++/coconut-tools/: enums.hpp
coconut-tools-enums/src/main/c++/coconut-tools/enums/: Mask.hpp  enum.hpp  flag.hpp
coconut-tools-enums/src/test/c++/coconut-tools/enums/: Mask.cpp  enum.cpp  flag.cpp
coconut-tools-exceptions/: CMakeLists.txt  premake5.lua
coconut-tools-exceptions/src/main/c++/coconut-tools/exceptions/: Backtrace.cpp  Backtrace.hpp  GenericException.hpp  LogicError.hpp  RuntimeError.hpp
coconut-tools-factory/: CMakeLists.txt  premake5.lua
coconut-tools-factory/src/functional-test/c++/coconut-tools/factory/: factory.cpp
coconut-tools-factory/src/main/c++/coconut-tools/: CreatorRegistry.hpp  creator.hpp  factory.hpp
coconut-tools-factory/src/main/c++/coconut-tools/factory/: CreatorRegistry.hpp  Factory.hpp  error-policy.hpp  storage.hpp
coconut-tools-factory/src/test/c++/coconut-tools/factory/: CreatorRegistry.cpp  Factory.cpp
coconut-tools-logger/: CMakeLists.txt  premake5.lua
coconut-tools-logger/src/functional-test/c++/coconut-tools/logger/: api-logging.cpp  macro-logging.cpp
coconut-tools-logger/src/main/c++/coconut-tools/: logger.hpp
coconut-tools-policy/: CMakeLists.txt  premake5.lua
coconut-tools-serialisation/: CMakeLists.txt  premake5.lua
coconut-tools-serialisation/src/main/c++/coconut-tools/: serialisation.hpp
coconut-tools-singleton/: CMakeLists.txt  premake5.lua
coconut-tools-singleton/src/main/c++/coconut-tools/: singleton.hpp
coconut-tools-system/: CMakeLists.txt  premake5.lua
coconut-tools-test-utils/: CMakeLists.txt  premake5.lua
coconut-tools-utils/: CMakeLists.txt  premake5.lua
coconut-tools-version/: CMakeLists.txt  premake5.lua
concurrent/: Lockable.hpp  LockingPtr.hpp
design-pattern/: Registry.hpp
design-pattern/registry/: Registry.hpp  storage-policies.hpp
extras/: change-namespace.py
logger/: Context.hpp  Level.hpp  Logger.hpp  macros.hpp
premake/: coconut-tools.lua  gmock.lua  project.lua
premake/structure/: structure.lua
src/main/c++/concurrent/: LockTraits.hpp  Lockable.hpp  LockingPtr.hpp
src/main/c++/configuration/: Configurable.hpp  Configuration.hpp  ConfigurationUpdater.hpp  FlatConfiguration.hpp  HierarchicalConfiguration.cpp  HierarchicalConfiguration.hpp  Parser.hpp  Reader.hpp  StackedConfiguration.hpp  StringConfiguration.hpp  configuration-exceptions.cpp  configuration-exceptions.hpp
src/main/c++/configuration/hierarchical/: NodeSpecifier.cpp  NodeSpecifier.hpp
src/main/c++/configuration/parsers/: ParseError.hpp  PropertiesParser.cpp  PropertiesParser.hpp  SimpleParser.cpp  SimpleParser.hpp
src/main/c++/configuration/readers/: BasicReader.cpp  BasicReader.hpp  SimpleConfigurationReader.hpp
src/main/c++/design-pattern/: Factory.hpp  Registry.hpp
src/main/c++/design-pattern/detail/: LockingPolicy.hpp
src/main/c++/design-pattern/registry/: Registry.hpp  storage-policies.hpp
src/main/c++/exceptions/: Backtrace.hpp  Exception.hpp  RuntimeError.hpp
src/main/c++/exceptions/gcc/: Backtrace.cpp
src/main/c++/logger/: Context.hpp  Level.hpp  Logger.cpp  Logger.hpp
src/main/c++/logger/appender/: Appender.hpp
src/main/c++/logger/layout/: Layout.hpp
src/main/c++/system/: SystemError.hpp  tmp-file.cpp  tmp-file.hpp
src/main/c++/utils/: Formatter.hpp  Null.hpp  Sequence.hpp  pointee.hpp  raii-helper.hpp
src/main/cmake/: version.h.in
src/test/c++/: test-utils.hpp
src/test/c++/concurrent/: Lockable.cpp  LockingPtr.cpp
src/test/c++/configuration/: Configuration.cpp  ConfigurationUpdater.cpp  HierarchicalConfiguration.cpp
src/test/c++/configuration/hierarchical/: NodeSpecifier.cpp
src/test/c++/configuration/parsers/: PropertiesParser.cpp
src/test/c++/configuration/readers/: BasicReader.cpp  SimpleConfigurationReader.cpp
src/test/c++/logger/: Logger.cpp
src/test/c++/system/: tmp-file.cpp
src/test/c++/utils/: Formatter.cpp  raii-helper.cpp
unit-tests/concurrent/: LockingPtr.cpp
unit-tests/logger/: Logger.cpp
(+226 files in other folders)
